v1.3 Enhancements and Fixes
* Fixed an issue with the Page Bottom widget area when using a language
translation. Adjusted the sidebar-pagebottom.php to call the sidebar by
ID rather than name since language translations can change the name.
* Enhanced the CSS to better handle the WordPress Admin Bar when it's
in use. Previously, the main menu overlapped it a bit which was ugly
and made it harder to navigate.
* Updated the language translation tag for the social menu. It
previously had a different tag ('xtremelysocial') than the rest of the
theme ('flat-bootstrap').
* Changed a function name that referred to our spot theme instead of
this link theme. It didn't cause any problems, but was confusing to
anyone looking at the code.
* Removed reference to Blacktie.co from the site credits that
automatically display at the bottom of the theme. They are still
credited in this readme.txt file of course.

--- a/style.css
+++ b/style.css
@@ -4,11 +4,11 @@ Theme URI: http://xtremelysocial.com/wordpress/link/
 Description: Link by XtremelySocial is an adaptation of the "Link" theme by Blacktie.co. It is a modern, fully responsive, "flat" style theme with a nice color palette, big full-width images, and full-width colored sections. The navbar is just a menu button fixed at the top of the page to let your content take center stage. It includes several beautiful header images for businesses, photographers, musicians, writers and you can upload your own as well. For more information go to http://xtremelysocial.com/wordpress/link/.
 Author: XtremelySocial and Blacktie
 Author URI: http://xtremelysocial.com
-Version: 1.2
+Version: 1.3
 License: GNU General Public License
 License URI: http://www.opensource.org/licenses/GPL-3.0
 Template: flat-bootstrap
-Template Version: 1.5
+Template Version: 1.8
 Tags: one-column, right-sidebar, left-sidebar, fluid-layout, responsive-layout, custom-background, custom-header, custom-menu, featured-images, featured-image-header, full-width-template, flexible-header, rtl-language-support, theme-options, translation-ready, sticky-post, threaded-comments, light, blue
 
 Link WordPress theme, Copyright (C) 2014 XtremelySocial
@@ -95,6 +95,25 @@ h6,
 .content-header {
     background-color: #1abc9c;
     color: #fff;
+}
+
+/* When WordPress admin bar is displayed, move theme menu down below it. Note that the
+ * media query here uses the exact breakpoints in WordPress not the breakpoints in this
+ * theme. */
+/*.navbar-fixed-top { 
+	top: 0; 
+}*/
+body.admin-bar .offcanvas-menu { 
+	top: 32px !important; 
+}
+body.admin-bar #wpadminbar {
+    position: fixed;
+	border-bottom: 1px solid #080808; /* match our topnav */
+}
+@media screen and (max-width:782px) {
+	body.admin-bar .offcanvas-menu {
+		top: 46px !important; 
+	}
 }
 
 /* Toggle Menu (Offcanvas) */
@@ -296,7 +315,9 @@ h1.entry-title {
     width: 100%
 }
 
-.social-footer .col-lg-4, .social-footer .col-md-4, .social-footer .col-sm-4 {
+.social-footer .col-lg-4, 
+.social-footer .col-md-4, 
+.social-footer .col-sm-4 {
     margin: 0;
     padding: 15px
 }
